Adding delete to menu options, moving delete function into directive

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -618,26 +618,49 @@ p {
     right: 0;
     height: 45px;
     width: 30px; }
-    .todo-body .todo-list .options a {
-      display: block;
-      position: relative;
+    .todo-body .todo-list .options:hover {
+      cursor: pointer; }
+      .todo-body .todo-list .options:hover:after {
+        opacity: 1; }
+      .todo-body .todo-list .options:hover .menu {
+        opacity: 1;
+        visibility: visible; }
+    .todo-body .todo-list .options:after {
       height: 100%;
       width: 18px;
+      display: block;
+      content: '';
+      position: absolute;
+      left: 0;
+      top: 0;
+      background: url("data:image/svg+xml;charset=utf8,%3C?xml version='1.0' encoding='UTF-8' standalone='no'?%3E %3Csvg width='20px' height='20px' viewBox='0 0 20 20' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E %3C!-- Generator: Sketch 3.7.2 (28276) - http://www.bohemiancoding.com/sketch --%3E %3Ctitle%3Edots-horizontal-triple%3C/title%3E %3Cdesc%3ECreated with Sketch.%3C/desc%3E %3Cdefs%3E%3C/defs%3E %3Cg id='Page-1' stroke='none' stroke-width='1' fill='none' fill-rule='evenodd'%3E %3Cg id='dots-horizontal-triple' fill='%23000000'%3E %3Cpath d='M10,12 C11.1045695,12 12,11.1045695 12,10 C12,8.8954305 11.1045695,8 10,8 C8.8954305,8 8,8.8954305 8,10 C8,11.1045695 8.8954305,12 10,12 Z M10,6 C11.1045695,6 12,5.1045695 12,4 C12,2.8954305 11.1045695,2 10,2 C8.8954305,2 8,2.8954305 8,4 C8,5.1045695 8.8954305,6 10,6 Z M10,18 C11.1045695,18 12,17.1045695 12,16 C12,14.8954305 11.1045695,14 10,14 C8.8954305,14 8,14.8954305 8,16 C8,17.1045695 8.8954305,18 10,18 Z' id='Combined-Shape'%3E%3C/path%3E %3C/g%3E %3C/g%3E %3C/svg%3E") no-repeat right center;
+      background-size: 100%;
       opacity: .5;
+      transition: opacity .1s; }
+    .todo-body .todo-list .options .menu {
+      background-color: #fff;
+      border: 1px solid #e4e7e8;
+      box-shadow: 1px 1px 0 0 rgba(0, 0, 0, 0.1);
+      text-align: center;
       transition: opacity .1s;
-      text-indent: -9000px; }
-      .todo-body .todo-list .options a:hover {
-        opacity: 1; }
-      .todo-body .todo-list .options a:after {
-        background: url("data:image/svg+xml;charset=utf8,%3C?xml version='1.0' encoding='UTF-8' standalone='no'?%3E %3Csvg width='20px' height='20px' viewBox='0 0 20 20' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E %3C!-- Generator: Sketch 3.7.2 (28276) - http://www.bohemiancoding.com/sketch --%3E %3Ctitle%3Edots-horizontal-triple%3C/title%3E %3Cdesc%3ECreated with Sketch.%3C/desc%3E %3Cdefs%3E%3C/defs%3E %3Cg id='Page-1' stroke='none' stroke-width='1' fill='none' fill-rule='evenodd'%3E %3Cg id='dots-horizontal-triple' fill='%23000000'%3E %3Cpath d='M10,12 C11.1045695,12 12,11.1045695 12,10 C12,8.8954305 11.1045695,8 10,8 C8.8954305,8 8,8.8954305 8,10 C8,11.1045695 8.8954305,12 10,12 Z M10,6 C11.1045695,6 12,5.1045695 12,4 C12,2.8954305 11.1045695,2 10,2 C8.8954305,2 8,2.8954305 8,4 C8,5.1045695 8.8954305,6 10,6 Z M10,18 C11.1045695,18 12,17.1045695 12,16 C12,14.8954305 11.1045695,14 10,14 C8.8954305,14 8,14.8954305 8,16 C8,17.1045695 8.8954305,18 10,18 Z' id='Combined-Shape'%3E%3C/path%3E %3C/g%3E %3C/g%3E %3C/svg%3E") no-repeat right center;
-        background-size: 100%;
-        height: 100%;
-        width: 100%;
+      visibility: hidden;
+      opacity: 0;
+      padding: 5px 0;
+      min-width: 90px;
+      position: absolute;
+      left: -35px;
+      top: 35px;
+      width: auto;
+      z-index: 1; }
+      .todo-body .todo-list .options .menu a {
+        color: #466A80;
+        font-size: 12px;
+        text-decoration: none;
+        padding: 2px 0;
         display: block;
-        content: '';
-        position: absolute;
-        left: 0;
-        top: 0; }
+        width: 100%; }
+        .todo-body .todo-list .options .menu a:hover {
+          background-color: #e4e7e8; }
 
 .button {
   display: inline-block;
