--- a/public/templates/partials/todo.html
+++ b/public/templates/partials/todo.html
@@ -2,8 +2,13 @@
     <input toggle-complete type="checkbox" class="todo-complete" ng-model="todo.completed" ng-change="toggleComplete(todo)">
     <form ng-show="editing" ng-submit="update(todo); editing = false" class="edit-form">
         <input type="text" class="form-control" name="todo" ng-model="todo.text">
-        <!-- <button type="submit" class="btn btn-success">Save</button> -->
+        <button type="submit" class="save">Save</button>
+        <a href="#" class="cancel">Cancel</a>
     </form>
     <span class="text" ng-hide="editing" ng-click="editing = true">{{todo.text}}</span>
-    <span class="options"><a href="#">Options</a></span>
+    <todo-options class="options">
+        <div class="menu">
+            <a href="#" ng-click="delete(todo);">Delete</a>
+        </div>
+    </todo-options>
 </li>
