Add initial setup of list resources, modal window module ngDialog for add list form

--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -12,3 +12,5 @@
 @import 'components/buttons';
 @import 'components/greeting';
 @import 'components/user-header';
+@import 'vendor/ng-dialog';
+@import 'vendor/ng-dialog-theme-default';
