--- a/public/scss/templates/_todos.scss
+++ b/public/scss/templates/_todos.scss
@@ -5,12 +5,12 @@
     }
 
     .todo-sidebar {
-        width: 30%;
+        width: 25%;
     }
 
     .todo-body {
-        padding: 0 0 0 30px;
-        width: 70%;
+        padding: 0 0 0 90px;
+        width: 75%;
     }
 }
 
@@ -18,6 +18,38 @@
 
     h3 {
         margin: 40px 0 30px;
+        position: relative;
+
+        a {
+            display: inline-block;
+            float: right;
+            width: 20px;
+            height: 20px;
+            position: relative;
+            margin-top: 8px;
+
+            color: $primary;
+            font-size: 12px;
+            text-decoration: none;
+
+            span {
+                display: none;
+            }
+
+            &:after {
+                background: url('../icons/add-outline.svg') no-repeat right center;
+                background-size: 100%;
+                transition: all .1s;
+
+                height: 100%;
+                width: 100%;
+                display: block;
+                content: '';
+                position: absolute;
+                right: 0;
+                top: 0;
+            }
+        }
     }
 
     ul {
@@ -31,7 +63,6 @@
     }
 
     li {
-        display: block;
         position: relative;
         margin: 0;
         opacity: .3;
@@ -40,23 +71,40 @@
         &.active {
             opacity: 1;
         }
+    
+        a {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            text-decoration: none;
+
+            position: relative;
+            padding: 12px 0;
+
+            &:hover {
+                .list-name {
+                    color: $sky;
+                    // left: 4px;
+                }
+            }
+        }
     }
 
-    a {
-        display: block;
+    .list-name {
         color: $slate;
         font-size: 18px;
-        text-decoration: none;
-        transition: all .15s;
 
         position: relative;
-        padding: 12px 0;
         left: 0;
+        transition: all .15s;
+    }
 
-        &:hover {
-            color: $sky;
-            left: 4px;
-        }
+    .list-color {
+        border-radius: 2px;
+        display: inline-block;
+        height: 20px;
+        width: 20px;
+        background-color: $bubblegum;
     }
 }
 
@@ -246,7 +294,7 @@
                 display: block;
                 content: '';
                 position: absolute;
-                left: 0;
+                right: -8px;
                 top: 0;
                 background: url('../icons/dots-horizontal-triple.svg') no-repeat right center;
                 background-size: 100%;                
@@ -265,7 +313,7 @@
                 padding: 5px 0;
                 min-width: 90px;
                 position: absolute;
-                left: -35px;
+                left: 0;
                 top: 35px;
                 width: auto;
                 z-index: 2;
