--- a/public/templates/todos.html
+++ b/public/templates/todos.html
@@ -3,15 +3,15 @@
     <div class="inner-body">
         <div class="todo-wrap">
             <div class="container">
-                <div class="todo-sidebar">
-                    <h3>Your lists</h3>
+                <div class="todo-sidebar" ng-controller="listController">
+                    <h3>Your lists <a href="#" ng-click="openModal()"><span>New list</span></a></h3>
                     <ul>
-                        <li><a href="#">General</a></li>
-                        <li class="active"><a href="#">Work</a></li>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Groceries</a></li>
-                        <li><a href="#">Vacation</a></li>
-                        <li><a href="#">Camping</a></li>
+                        <li ng-repeat="list in lists">
+                            <a href="#">
+                                <span class="list-name">{{list.name}}</span>
+                                <span class="list-color"></span>
+                            </a>
+                        </li>
                     </ul>
                 </div>
                 <div class="todo-body">
