--- a/public/templates/todos.html
+++ b/public/templates/todos.html
@@ -9,6 +9,7 @@
                         <li ng-repeat="list in lists">
                             <a href="#">
                                 <span class="list-name">{{list.name}}</span>
+                                <a href="#" ng-click="delete(list);">X</a>
                                 <span class="list-color"></span>
                             </a>
                         </li>
