--- a/public/templates/partials/new-list.html
+++ b/public/templates/partials/new-list.html
@@ -1,6 +1,6 @@
-<div class="dialog-contents" ng-controller="listController">
+<div class="dialog-contents">
     <h3>New list</h3>
-    <form add-list ng-submit="createList()">
+    <form ng-submit="createList()">
         <div class="form-group">
             <label>Name</label>
             <input type="text" name="name" ng-model="list.name">
