--- a/public/scss/templates/_todos.scss
+++ b/public/scss/templates/_todos.scss
@@ -17,6 +17,8 @@
 .todo-sidebar {
 
     h3 {
+        font-size: 24px;
+        line-height: 1.2;
         margin: 40px 0 30px;
         position: relative;
 
@@ -26,11 +28,12 @@
             width: 20px;
             height: 20px;
             position: relative;
-            margin-top: 8px;
+            margin-top: 4px;
 
             color: $primary;
             font-size: 12px;
             text-decoration: none;
+            outline: none;
 
             span {
                 display: none;
@@ -71,7 +74,7 @@
         &.active {
             opacity: 1;
         }
-    
+
         a {
             display: flex;
             align-items: center;
@@ -220,7 +223,7 @@
                 border: 1px solid $hint;
                 padding: 12px 70px 12px 10px;
             }
-            
+
             .save,
             .cancel {
                 display: block;
@@ -241,7 +244,7 @@
                     display: block;
                     width: 100%;
                     height: 100%;
-                    background-size: 100%;  
+                    background-size: 100%;
                 }
             }
 
@@ -252,7 +255,7 @@
                 padding: 0;
                 margin: 0;
                 right: 40px;
-                
+
                 &:after {
                     background: url('../icons/checkmark.svg') no-repeat 50% 50%;
                 }
@@ -265,7 +268,7 @@
 
                 &:after {
                     background: url('../icons/close.svg') no-repeat 50% 50%;
-                }   
+                }
             }
         }
 
@@ -274,7 +277,7 @@
             right: 0;
             height: $item-height;
             width: 30px;
-            
+
             &:hover {
                 cursor: pointer;
 
@@ -297,7 +300,7 @@
                 right: -8px;
                 top: 0;
                 background: url('../icons/dots-horizontal-triple.svg') no-repeat right center;
-                background-size: 100%;                
+                background-size: 100%;
                 opacity: .5;
                 transition: opacity .1s;
             }
