--- a/public/templates/lists.html
+++ b/public/templates/lists.html
@@ -6,7 +6,7 @@
                 <div class="todo-sidebar">
                     <h3>Your lists <a href="#" ng-click="openModal()"><span>New list</span></a></h3>
                     <ul>
-                        <li ng-repeat="list in lists">
+                        <li ng-repeat="list in lists" ng-class="activeList(list)">
                             <a href="#">
                                 <span class="list-name">{{list.name}}</span>
                                 <span class="list-color"></span>
