Turning on webpack debug/sourcemaps

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1022,3 +1022,5 @@ body.ngdialog-open {
 .ngdialog.ngdialog-theme-default .ngdialog-button.ngdialog-button-secondary {
   background: #e0e0e0;
   color: #777; }
+
+/*# sourceMappingURL=main.css.map*/
