--- a/public/templates/lists.html
+++ b/public/templates/lists.html
@@ -6,10 +6,10 @@
                 <div class="todo-sidebar">
                     <h3>Your lists <a href="#" ng-click="openModal()"><span>New list</span></a></h3>
                     <ul>
-                        <li ng-repeat="list in lists" ng-class="activeList(list)" list-activate>
+                        <li ng-repeat="list in lists" id="listId-{{list._id}}" list-activate>
                             <a href="#">
                                 <span class="list-name">{{list.name}}</span>
-                                <span class="list-color"></span>
+                                <a href="#" ng-click="delete(list)">Delete</a>
                             </a>
                         </li>
                     </ul>
