Fixing todo input not clearing on submit (issue #17)

--- a/public/templates/lists.html
+++ b/public/templates/lists.html
@@ -16,7 +16,7 @@
                 </div>
                 <div class="todo-body">
                     <div class="form-wrap">
-                        <form ng-submit="createTodo()">
+                        <form ng-submit="createTodo()" name="createTodoForm">
                             <div class="form-group">
                                 <label>What do you need to do?</label>
                                 <input type="text" name="todo" ng-model="todo">
