--- a/public/templates/lists.html
+++ b/public/templates/lists.html
@@ -7,10 +7,8 @@
                     <h3>Your lists <a href="#" ng-click="openModal()"><span>New list</span></a></h3>
                     <ul>
                         <li ng-repeat="list in lists" list-activate>
-                            <a href="#">
-                                <span class="list-name">{{list.name}}</span>
-                                <a href="#" ng-click="delete(list)">Delete</a>
-                            </a>
+                            <a href="#" class="name"><span class="list-name">{{list.name}}</span></a>
+                            <a href="#" class="delete" ng-click="delete(list)">Delete</a>
                         </li>
                     </ul>
                 </div>
