Update scope when creating first list after signup (issue #20), initialize empty array when adding first list after signup

--- a/public/templates/partials/header.html
+++ b/public/templates/partials/header.html
@@ -5,7 +5,7 @@
             <ul class="nav">
                 <li ng-if="!user"><a class="nav-link" href="/login">Login</a></li>
                 <li ng-if="!user"><a class="nav-link" href="/signup">Signup</a></li>
-                <li ng-if="user"><a class="nav-link" href="/todos">Todos</a></li>
+                <li ng-if="user"><a class="nav-link" href="/lists">Lists</a></li>
                 <li ng-if="user"><a class="nav-link" href="/profile">Profile</a></li>
                 <li ng-if="user"><a class="nav-link" href="/logout">Logout</a></li>
             </ul>
